# fastapi-base

./: .gitignore  README.md  alembic.ini  conftest.py  main.py  pyproject.toml
alembic/: env.py
core/: config.py  security.py
crud/: __init__.py  base.py  crud_item.py  crud_user.py
db/: base.py  base_class.py  session.py
models/: __init__.py  item.py  user.py
routes/: api.py  deps.py
routes/endpoints/: items.py  login.py  users.py
schemas/: __init__.py  item.py  user.py
tests/: test_item.py  test_user.py
