[tool.poetry]
name = "fastapi base project"
version = "1.0.0"
description = "FastAPI base code for starting a new project with postgresql database integration"
authors = ["Lead Developer <frutobilly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.5"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
sqlalchemy = "^2.0.20"
alembic = "^1.11.0"
fastapi = "^0.103.1"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.7"
pytest = "^7.3.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.0.3"
mypy = "^1.5.1"
email-validator = "^2.1.0.post1"
httpx = "^0.25.1"

[tool.poetry.dev-dependencies]
mypy = "^1.5.1"
black = "^23.7.0"
isort = "^5.12.0"
autoflake = "^2.2.1"
flake8 = "^6.1.0"
pytest = "^7.4.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
